Changing default download source; running as consul user; making checks directory world-readable

--- a/templates/service/init.erb
+++ b/templates/service/init.erb
@@ -23,7 +23,7 @@
 # Check that networking is up.
 [ "$NETWORKING" = "no" ] && exit 0
 
-exec="/usr/bin/consul"
+exec="su - consul /usr/bin/consul"
 prog=${exec##*/}
 
 lockfile="/var/lock/subsys/$prog"
