added rejoin to the client and server config

--- a/templates/server/config.json.erb
+++ b/templates/server/config.json.erb
@@ -1,14 +1,16 @@
 {
-  "bootstrap": <%= @bootstrap %>,
-  "server": true,
-  "datacenter": "core",
-  "data_dir": "/var/consul",
-  "encrypt": "<%= @encrypt_string %>",
-  "log_level": "INFO",
-<% if @bootstrap -%>
-  "enable_syslog": true
-<% else -%>
-  "enable_syslog": true,
-  "start_join": [<% @start_join.each do |j| -%><% if j == @start_join.last -%>"<%= j %>"<% else -%>"<%= j %>", <% end -%><% end -%>]
-<% end -%>
+	"bootstrap": <%= @bootstrap %>,
+	"server": true,
+	"datacenter": "core",
+	"data_dir": "/var/consul",
+	"encrypt": "<%= @encrypt_string %>",
+	"log_level": "INFO",
+	"enable_syslog": true,
+	"disable_update_check": true,
+	"rejoin_after_leave": true,
+	<% if @bootstrap -%>
+		"enable_syslog": true
+	<% else -%>
+		"start_join": [<% @start_join.each do |j| -%><% if j == @start_join.last -%>"<%= j %>"<% else -%>"<%= j %>", <% end -%><% end -%>]
+	<% end -%>
 }
